working on the modal live demo fixed the problem that caused modal dialog box not visible

--- a/style.css
+++ b/style.css
@@ -555,8 +555,8 @@ textarea {
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
+    /*display: none;*/
+    /*position: absolute;*/
     background-color: #f9f9f9;
     min-width: 20px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -958,6 +958,10 @@ THIS CODE BELOW IS FOR PROFILE.PHP
     background-color: #f0ad4e;
 }
 
-.modal-content {
-    z-index: -2;
+.modal-backdrop {
+    z-index: 1040;
+}
+
+.modal-dialog{
+    z-index: 1100;
 }
